# ChangeLog for dev-ruby/ruby-feedparser
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Nov 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -ruby-feedparser-0.2.ebuild:
  Drop old one, remember: use "svn mv" for version bumps

  26 Nov 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  ruby-feedparser-0.6.ebuild:
  Readd IUSE, x86-keyword

  24 Nov 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  +ruby-feedparser-0.6.ebuild:
  Version bump for ruby-feedparser. Bug 105122.

  29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  ruby-feedparser-0.2.ebuild:
  Add IUSE+SLOT

  23 Jun 2006; David Shakaryan <d@ompty.org> +ruby-feedparser-0.2.ebuild:
  New ebuild for bug #118682 by Sam Kyritsoglou.
