@@ -1,4 +1,4 @@
-DIST ruby-feedparser-0.6.tgz 32070 RMD160 bd3b5bcb680f0030af06ebda97208fa1be3197c2 SHA1 a5928c30fa8e3e9ee8e2f0c6522e9980949a7919 SHA256 79a391423c50ccca845baf87df7a9c336d1df8c9b0566ffde413656a7647efa7
-EBUILD ruby-feedparser-0.6.ebuild 522 RMD160 ab15292c054dc9b4e9c178252e1b403301779834 SHA1 638022639e657cde1f9f714db8afa70a40d249dc SHA256 27084cc22082868df46b122737bac17854d8d9f22cf93e210a554c861ba130de
-MISC ChangeLog 770 RMD160 1cfe151510d032393aace3c87465667bd7b30a1c SHA1 eeb243a2f357ddaf78168da1c177b6e4bcd10d91 SHA256 ef2560b55c0e778cef49676ea09b6521ba10ee9559f87733d0ab32f54f5a06b9
+DIST ruby-feedparser-0.7.tgz 32579 RMD160 3c8c1d4dcb6c7644fb166fd89aeac53f8b7327aa SHA1 103a0f2d91cd1cc9162f00795ae0d2d13487c1e6 SHA256 09faad2409224ca6e70b7da4035d4ca9d7b3a12c21016a363dd037ff6bcb7266
+EBUILD ruby-feedparser-0.7.ebuild 582 RMD160 01fe73815ce74fc7776b28cd539141303a0ba906 SHA1 5bc5d9273f4de656923c319720ae9b90e172910f SHA256 e426cf667d458908b49d0e9cc5856432fdf33de476add561e3da31a8433ce7b3
+MISC ChangeLog 974 RMD160 5e5b841e8fc5675d32609b8cc4deace30f767aa0 SHA1 e62e54a9080a60e5e0a436f677eff411339590cd SHA256 4173b3cd7fde0861bac86a27fea485da1aa014f03697982c8823a41c30f4b268
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
